# xserver

./: meson_options.txt
hw/xfree86/drivers/video/: meson.build
hw/xfree86/drivers/video/amdgpu/: README.md  meson.build
hw/xfree86/drivers/video/amdgpu/man/: amdgpu.man
hw/xfree86/drivers/video/amdgpu/src/: amdgpu_bo_helper.c  amdgpu_dri2.c  amdgpu_dri2.h  amdgpu_dri3.c  amdgpu_drm_queue.c  amdgpu_drv.h  amdgpu_glamor.c  amdgpu_glamor_wrappers.c  amdgpu_kms.c  amdgpu_misc.c  amdgpu_pixmap.c  amdgpu_present.c  amdgpu_probe.c  amdgpu_probe.h  amdgpu_sync.c  amdgpu_version.h  amdgpu_video.c  compat-api.h  drmmode_display.c  drmmode_display.h
